# WarframeCompanion

./: .gitignore  Cargo.toml  Trunk.toml
src/: app.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
